keystore to build, but failed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "PicoXR Playground.sln"
+    "dotnet.defaultSolution": "PicoXR-Playground.sln"
 }
