--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -1,15 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-    <application>
-        <activity android:name="com.unity3d.player.UnityPlayerActivity"
-                  android:theme="@style/UnityThemeSelector">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="3.1.0" android:installLocation="2" android:compileSdkVersion="34" android:compileSdkVersionCodename="14" package="com.DefaultCompany.Test" platformBuildVersionCode="34" platformBuildVersionName="14" >
+    <uses-sdk android:minSdkVersion="29" android:targetSdkVersion="34" >
+    </uses-sdk>
+    <supports-screens android:anyDensity="true" android:smallScreens="true" android:normalScreens="true" android:largeScreens="true" android:xlargeScreens="true" >
+    </supports-screens>
+    <uses-permission android:name="android.permission.INTERNET" >
+    </uses-permission>
+    <uses-feature android:glEsVersion="0x00030000" >
+    </uses-feature>
+    <uses-feature android:name="android.hardware.vulkan.version" android:required="false" >
+    </uses-feature>
+    <uses-feature android:name="android.hardware.touchscreen" android:required="false" >
+    </uses-feature>
+    <uses-feature android:name="android.hardware.touchscreen.multitouch" android:required="false" >
+    </uses-feature>
+    <uses-feature android:name="android.hardware.touchscreen.multitouch.distinct" android:required="false" >
+    </uses-feature>
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" >
+    </uses-permission>
+    <uses-permission android:name="com.pvr.tobactivate.permission.AUTH_CHECK" >
+    </uses-permission>
+    <application android:label="@string/app_name" android:icon="@mipmap/app_icon" android:allowBackup="false" android:extractNativeLibs="true" android:requestLegacyExternalStorage="true" >
+        <meta-data android:name="unity.splash-mode" android:value="0" >
+        </meta-data>
+        <meta-data android:name="unity.splash-enable" android:value="true" >
+        </meta-data>
+        <meta-data android:name="unity.launch-fullscreen" android:value="true" >
+        </meta-data>
+        <meta-data android:name="unity.render-outside-safearea" android:value="true" >
+        </meta-data>
+        <meta-data android:name="notch.config" android:value="portrait|landscape" >
+        </meta-data>
+        <meta-data android:name="unity.auto-report-fully-drawn" android:value="true" >
+        </meta-data>
+        <activity android:theme="@style/UnityThemeSelector" android:name="com.unity3d.player.UnityPlayerActivity" android:exported="true" android:launchMode="2" android:screenOrientation="0" android:configChanges="0x40003fff" android:hardwareAccelerated="false" android:resizeableActivity="false" >
+            <intent-filter >
+                <category android:name="android.intent.category.LAUNCHER" >
+                </category>
+                <action android:name="android.intent.action.MAIN" >
+                </action>
             </intent-filter>
-            <meta-data android:name="unityplayer.UnityActivity" android:value="true" />
+            <meta-data android:name="unityplayer.UnityActivity" android:value="true" >
+            </meta-data>
+            <meta-data android:name="notch_support" android:value="true" >
+            </meta-data>
         </activity>
+        <meta-data android:name="pvr.app.type" android:value="vr" >
+        </meta-data>
+        <meta-data android:name="pvr.sdk.version" android:value="XR Platform_3.0.5" >
+        </meta-data>
+        <meta-data android:name="pxr.sdk.version_code" android:value="5120" >
+        </meta-data>
+        <meta-data android:name="enable_cpt" android:value="0" >
+        </meta-data>
+        <meta-data android:name="Enable_AdaptiveHandModel" android:value="0" >
+        </meta-data>
+        <meta-data android:name="Hand_Tracking_HighFrequency" android:value="0" >
+        </meta-data>
+        <meta-data android:name="rendering_mode" android:value="1" >
+        </meta-data>
+        <meta-data android:name="display_rate" android:value="0" >
+        </meta-data>
+        <meta-data android:name="color_Space" android:value="1" >
+        </meta-data>
+        <meta-data android:name="MRCsupport" android:value="0" >
+        </meta-data>
+        <meta-data android:name="pvr.LateLatching" android:value="0" >
+        </meta-data>
+        <meta-data android:name="pvr.LateLatchingDebug" android:value="0" >
+        </meta-data>
+        <meta-data android:name="pvr.app.splash" android:value="0" >
+        </meta-data>
+        <meta-data android:name="PICO.swift.feature" android:value="0" >
+        </meta-data>
+        <meta-data android:name="adaptive_resolution" android:value="0" >
+        </meta-data>
+        <meta-data android:name="enable_mr_safeguard" android:value="1" >
+        </meta-data>
+        <meta-data android:name="enable_vst" android:value="0" >
+        </meta-data>
+        <meta-data android:name="enable_anchor" android:value="0" >
+        </meta-data>
+        <meta-data android:name="mr_map_mgr_auto_start" android:value="0" >
+        </meta-data>
+        <meta-data android:name="enable_spatial_anchor" android:value="0" >
+        </meta-data>
+        <meta-data android:name="enable_cloud_anchor" android:value="0" >
+        </meta-data>
+        <meta-data android:name="enable_mesh_anchor" android:value="0" >
+        </meta-data>
+        <meta-data android:name="enable_scene_anchor" android:value="0" >
+        </meta-data>
+        <meta-data android:name="pvr.SuperResolution" android:value="0" >
+        </meta-data>
+        <meta-data android:name="pvr.NormalSharpening" android:value="0" >
+        </meta-data>
+        <meta-data android:name="pvr.QualitySharpening" android:value="0" >
+        </meta-data>
+        <meta-data android:name="pvr.FixedFoveatedSharpening" android:value="0" >
+        </meta-data>
+        <meta-data android:name="pvr.SelfAdaptiveSharpening" android:value="0" >
+        </meta-data>
+        <meta-data android:name="handtracking" android:value="0" >
+        </meta-data>
+        <meta-data android:name="controller" android:value="1" >
+        </meta-data>
     </application>
 </manifest>
