--- a/Assets/Resources/PicoSdkPCConfig.json
+++ b/Assets/Resources/PicoSdkPCConfig.json
@@ -1,1 +1,1 @@
-{"general":{"region":"cn"},"account":{"access_token":""},"package":{"package_name":"com.NeehaXR.PicoXRPlayground","package_version_code":1,"package_version_name":"0.1"}}
+{"general":{"region":"cn"},"account":{"access_token":""},"package":{"package_name":"com.NeehaXR.PicoPlayground","package_version_code":1,"package_version_name":"1.0"}}
