--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,13 +2,14 @@
   "dependencies": {
     "com.unity.collab-proxy": "2.6.0",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.pico.livepreview": "file:D:/UnitY/X-tra Packages/Unity Live Preview Plugin-1.0.4-20241205",
     "com.unity.shadergraph": "14.0.11",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.9.4",
     "com.unity.xr.hands": "1.5.0",
-    "com.unity.xr.picoxr": "https://github.com/Pico-Developer/PICO-Unity-Integration-SDK.git",
+    "com.unity.xr.picoxr": "file:D:/UnitY/X-tra Packages/PICO Unity Integration SDK_250",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
